src/tests/render_snapshots/snapshots/sabiql__render_snapshots__result_pane__result_pane_sqlite_json_text_cell_detail_mode.snap
---
source: src/tests/render_snapshots/result_pane.rs
expression: output
---
test_project ▸ test_db ▸ -                                                                                                                         connected | sqlite
┌ [1] Explorer ─────────────────────────┐[Info] [Cols] [Idx] [FK] [Trig] [DDL]                                                                                       
│> notes                                │┌ [2] Inspector ───────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                       ││Rows:    ~100                                                                                                             │
│                                       ││Schema:  public                                                                                                           │
│                                       ││Table:   notes                                                                                                            │
│                                       ││Kind:    Table                                                                                                            │
│                                       ││Flags:   (none)                                                                                                           │
│                ╭ Cell Detail ── body──────────────────────────────────────────────────────────────────────────────────────────────────────────────╮               │
│                │{                                                                                                                                 │               │
│                │  "enabled": true,                                                                                                                │               │
│                │  "roles": [                                                                                                                      │               │
│                │    "admin",                                                                                                                      │               │
│                │    "writer"                                                                                                                      │               │
│                │  ],                                                                                                                              │               │
│                │  "theme": "dark"                                                                                                                 │               │
│                │}                                                                                                                                 │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │───────────────┘
│                │                                                                                                                                  │───────────────┐
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │Formatted JSON | 58 chars raw                                                                                                     │               │
│                ╰ y: Copy │ /: Search │ Esc: Close ────────────────────────────────────────────────────────────────────────────────────────────────╯               │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
└───────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
y:Copy  /:Search  n/N:Next/Prev  j/k/↑↓:Scroll  Esc:Close
